--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -8,25 +8,40 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-400: oklch(70.4% 0.191 22.216);
+    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-amber-400: oklch(82.8% 0.189 84.429);
-    --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-emerald-300: oklch(84.5% 0.143 164.978);
+    --color-emerald-600: oklch(59.6% 0.145 163.225);
     --color-teal-300: oklch(85.5% 0.138 181.071);
+    --color-cyan-400: oklch(78.9% 0.154 211.53);
+    --color-cyan-500: oklch(71.5% 0.143 215.221);
+    --color-indigo-600: oklch(51.1% 0.262 276.966);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-gray-700: oklch(37.3% 0.034 259.733);
+    --color-gray-800: oklch(27.8% 0.033 256.848);
+    --color-gray-900: oklch(21% 0.034 264.665);
     --color-gray-950: oklch(13% 0.028 261.692);
     --color-neutral-400: oklch(70.8% 0 0);
     --spacing: 0.25rem;
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
+    --font-weight-light: 300;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
+    --radius-xs: 0.125rem;
     --radius-md: 0.375rem;
+    --radius-lg: 0.5rem;
+    --radius-4xl: 2rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
@@ -199,11 +214,20 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
+  }
   .mr-auto {
     margin-right: auto;
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
   }
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
@@ -220,11 +244,17 @@
   .h-3\/4 {
     height: calc(3/4 * 100%);
   }
-  .h-8 {
-    height: calc(var(--spacing) * 8);
-  }
   .h-10 {
     height: calc(var(--spacing) * 10);
+  }
+  .h-15 {
+    height: calc(var(--spacing) * 15);
+  }
+  .h-18 {
+    height: calc(var(--spacing) * 18);
+  }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
   }
   .h-25 {
     height: calc(var(--spacing) * 25);
@@ -253,14 +283,8 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-3\/4 {
-    width: calc(3/4 * 100%);
-  }
   .w-6\/10 {
     width: calc(6/10 * 100%);
-  }
-  .w-8 {
-    width: calc(var(--spacing) * 8);
   }
   .w-9\/10 {
     width: calc(9/10 * 100%);
@@ -283,14 +307,47 @@
   .flex-1\/3 {
     flex: calc(1/3 * 100%);
   }
+  .flex-1\/10 {
+    flex: calc(1/10 * 100%);
+  }
+  .flex-1\/12 {
+    flex: calc(1/12 * 100%);
+  }
+  .flex-1\/15 {
+    flex: calc(1/15 * 100%);
+  }
   .flex-2 {
     flex: 2;
   }
   .flex-2\/3 {
     flex: calc(2/3 * 100%);
   }
+  .flex-2\/10 {
+    flex: calc(2/10 * 100%);
+  }
+  .flex-2\/12 {
+    flex: calc(2/12 * 100%);
+  }
+  .flex-2\/15 {
+    flex: calc(2/15 * 100%);
+  }
+  .flex-3\/15 {
+    flex: calc(3/15 * 100%);
+  }
+  .flex-7\/10 {
+    flex: calc(7/10 * 100%);
+  }
+  .flex-9\/12 {
+    flex: calc(9/12 * 100%);
+  }
   .flex-10 {
     flex: 10;
+  }
+  .flex-11\/15 {
+    flex: calc(11/15 * 100%);
+  }
+  .flex-12\/15 {
+    flex: calc(12/15 * 100%);
   }
   .origin-top {
     transform-origin: top;
@@ -351,9 +408,68 @@
   .rounded-md {
     border-radius: var(--radius-md);
   }
-  .border-0 {
-    border-style: var(--tw-border-style);
-    border-width: 0px;
+  .rounded-xs {
+    border-radius: var(--radius-xs);
+  }
+  .rounded-s {
+    border-start-start-radius: 0.25rem;
+    border-end-start-radius: 0.25rem;
+  }
+  .rounded-l-4xl {
+    border-top-left-radius: var(--radius-4xl);
+    border-bottom-left-radius: var(--radius-4xl);
+  }
+  .rounded-l-md {
+    border-top-left-radius: var(--radius-md);
+    border-bottom-left-radius: var(--radius-md);
+  }
+  .rounded-bl-lg {
+    border-bottom-left-radius: var(--radius-lg);
+  }
+  .rounded-bl-md {
+    border-bottom-left-radius: var(--radius-md);
+  }
+  .rounded-bl-xs {
+    border-bottom-left-radius: var(--radius-xs);
+  }
+  .border-b-1 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
+  .border-b-4 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 4px;
+  }
+  .border-b-6 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 6px;
+  }
+  .border-l-2 {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 2px;
+  }
+  .border-l-4 {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 4px;
+  }
+  .border-\[\#321d34\] {
+    border-color: #321d34;
+  }
+  .border-cyan-500 {
+    border-color: var(--color-cyan-500);
+  }
+  .border-indigo-600 {
+    border-color: var(--color-indigo-600);
+  }
+  .bg-\[\#f6ebdc\] {
+    background-color: #f6ebdc;
+  }
+  .bg-\[f6ebdc\] {
+    background-color: f6ebdc;
   }
   .bg-amber-200\/20 {
     background-color: color-mix(in srgb, oklch(92.4% 0.12 95.746) 20%, transparent);
@@ -367,8 +483,26 @@
       background-color: color-mix(in oklab, var(--color-amber-300) 25%, transparent);
     }
   }
-  .bg-amber-800 {
-    background-color: var(--color-amber-800);
+  .bg-cyan-400 {
+    background-color: var(--color-cyan-400);
+  }
+  .bg-cyan-500\/50 {
+    background-color: color-mix(in srgb, oklch(71.5% 0.143 215.221) 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-cyan-500) 50%, transparent);
+    }
+  }
+  .bg-emerald-600\/50 {
+    background-color: color-mix(in srgb, oklch(59.6% 0.145 163.225) 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-emerald-600) 50%, transparent);
+    }
+  }
+  .bg-gray-50 {
+    background-color: var(--color-gray-50);
+  }
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
   }
   .bg-gray-600 {
     background-color: var(--color-gray-600);
@@ -385,26 +519,17 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
-  .pt-3 {
-    padding-top: calc(var(--spacing) * 3);
-  }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
   }
-  .pr-4 {
-    padding-right: calc(var(--spacing) * 4);
-  }
   .pr-6 {
     padding-right: calc(var(--spacing) * 6);
   }
   .pr-10 {
     padding-right: calc(var(--spacing) * 10);
-  }
-  .pb-3 {
-    padding-bottom: calc(var(--spacing) * 3);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
@@ -414,9 +539,6 @@
   }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
-  }
-  .pl-4 {
-    padding-left: calc(var(--spacing) * 4);
   }
   .pl-6 {
     padding-left: calc(var(--spacing) * 6);
@@ -430,6 +552,14 @@
   .text-left {
     text-align: left;
   }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
   .text-6xl {
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
@@ -442,12 +572,31 @@
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
   }
+  .font-light {
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
+  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
   .break-all {
     word-break: break-all;
+  }
+  .text-\[\#9c2f3c8c\] {
+    color: #9c2f3c8c;
+  }
+  .text-\[\#b13947b9\] {
+    color: #b13947b9;
+  }
+  .text-\[\#d94355\] {
+    color: #d94355;
+  }
+  .text-\[\#d943558c\] {
+    color: #d943558c;
+  }
+  .text-\[\#d\] {
+    color: #d;
   }
   .text-amber-50 {
     color: var(--color-amber-50);
@@ -458,11 +607,26 @@
   .text-gray-50 {
     color: var(--color-gray-50);
   }
-  .text-gray-100 {
-    color: var(--color-gray-100);
+  .text-gray-700 {
+    color: var(--color-gray-700);
+  }
+  .text-gray-800 {
+    color: var(--color-gray-800);
+  }
+  .text-gray-900 {
+    color: var(--color-gray-900);
   }
   .text-neutral-400\/100 {
     color: var(--color-neutral-400);
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
+  .text-red-500\/75 {
+    color: color-mix(in srgb, oklch(63.7% 0.237 25.331) 75%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-red-500) 75%, transparent);
+    }
   }
   .line-through {
     text-decoration-line: line-through;
@@ -530,13 +694,6 @@
     &:hover {
       @media (hover: hover) {
         cursor: pointer;
-      }
-    }
-  }
-  .hover\:bg-emerald-300 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-emerald-300);
       }
     }
   }
